[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yoshihisa_furusawa"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.0"
pandas = "^1.5.1"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
mypy = "^0.991"
flake8 = "^5.0.4"
pytest = "^7.2.0"
nptyping = "^2.4.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
